# freertos_qemu_demo

./: CMakeLists.txt  CMakePresets.json  README.md  env.sh
cmake/: toolchain.cmake
